--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@types/lodash": "^4.14.117",
 		"@types/mathjax": "0.0.35",
+		"@types/react-router-dom": "^4.3.1",
 		"@types/reactstrap": "^6.4.0",
 		"@types/showdown": "^1.7.5",
 		"lodash": "^4.17.11",
@@ -41,9 +42,11 @@
 		"@types/react-dom": "^16.0.9",
 		"chroma.ts": "^1.0.1",
 		"classnames": "^2.2.6",
+		"gists": "^2.0.0",
 		"lodash.memoize": "^4.1.2",
 		"pre-commit": "^1.2.2",
 		"prettier": "^1.14.3",
+		"querystring": "^0.2.0",
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
 		"rimraf": "^2.6.2",
@@ -51,6 +54,7 @@
 		"rollup-plugin-analyzer": "^2.1.0",
 		"rollup-plugin-commonjs": "^9.2.0",
 		"rollup-plugin-glsl": "^1.2.0",
+		"rollup-plugin-json": "^3.1.0",
 		"rollup-plugin-livereload": "^0.6.0",
 		"rollup-plugin-minify": "^1.0.3",
 		"rollup-plugin-node-resolve": "^3.4.0",
