--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/lodash": "^4.14.117",
+		"@types/lodash-es": "^4.17.1",
 		"@types/mathjax": "0.0.35",
 		"@types/react-router-dom": "^4.3.1",
-		"@types/reactstrap": "^6.4.0",
+		"@types/reactstrap": "^6.4.2",
 		"@types/showdown": "^1.7.5",
-		"lodash": "^4.17.11",
 		"react-router-dom": "^4.3.1",
 		"reactstrap": "^6.5.0",
-		"showdown": "^1.8.6",
+		"showdown": "^1.8.7",
 		"slugify": "^1.3.1"
 	},
 	"devDependencies": {
 		"@types/classnames": "^2.2.6",
 		"@types/lodash.memoize": "^4.1.4",
-		"@types/react": "^16.4.16",
+		"@types/react": "^16.4.18",
 		"@types/react-dom": "^16.0.9",
 		"chroma.ts": "^1.0.1",
 		"classnames": "^2.2.6",
 		"gists": "^2.0.0",
+		"lodash-es": "^4.17.11",
 		"lodash.memoize": "^4.1.2",
 		"pre-commit": "^1.2.2",
 		"prettier": "^1.14.3",
@@ -68,7 +68,7 @@
 		"rollup-plugin-typescript2": "^0.17.1",
 		"rollup-plugin-uglify": "^6.0.0",
 		"svg-to-dataurl": "^1.0.0",
-		"terser": "^3.10.0",
+		"terser": "^3.10.1",
 		"ts-node": "^7.0.1",
 		"ts3dutils": "^0.1.1",
 		"tslint": "^5.11.0",
