--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "learn",
 	"version": "1.0.0",
-	"description": "",
+	"description": "Learning Card Tool",
+	"repository": "github:NaridaL/learn",
 	"main": "dist/index.umd.js",
 	"types": "src/index.ts",
 	"scripts": {
@@ -25,55 +26,57 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/lodash-es": "^4.17.1",
+		"@types/lodash-es": "^4.17.3",
 		"@types/mathjax": "0.0.35",
 		"@types/react-router-dom": "^4.3.1",
-		"@types/reactstrap": "^6.4.2",
-		"@types/showdown": "^1.7.5",
-		"react-router-dom": "^4.3.1",
-		"reactstrap": "^6.5.0",
-		"showdown": "^1.8.7",
-		"slugify": "^1.3.1"
+		"@types/reactstrap": "^7.1.3",
+		"@types/showdown": "^1.9.2",
+		"react-router-dom": "^5.0.0",
+		"react-timeago": "^4.4.0",
+		"reactstrap": "^8.0.0",
+		"showdown": "^1.9.0",
+		"slugify": "^1.3.4"
 	},
 	"devDependencies": {
-		"@types/classnames": "^2.2.6",
-		"@types/lodash.memoize": "^4.1.4",
-		"@types/react": "^16.4.18",
-		"@types/react-dom": "^16.0.9",
-		"chroma.ts": "^1.0.1",
+		"@types/classnames": "^2.2.7",
+		"@types/lodash.memoize": "^4.1.6",
+		"@types/react": "^16.8.12",
+		"@types/react-dom": "^16.8.3",
+		"@types/react-timeago": "^4.1.0",
+		"chroma.ts": "^1.0.3",
 		"classnames": "^2.2.6",
 		"gists": "^2.0.0",
 		"lodash-es": "^4.17.11",
 		"lodash.memoize": "^4.1.2",
 		"pre-commit": "^1.2.2",
-		"prettier": "^1.14.3",
+		"prettier": "^1.16.4",
 		"querystring": "^0.2.0",
-		"react": "^16.5.2",
-		"react-dom": "^16.5.2",
-		"rimraf": "^2.6.2",
-		"rollup": "^0.66.6",
-		"rollup-plugin-analyzer": "^2.1.0",
-		"rollup-plugin-commonjs": "^9.2.0",
-		"rollup-plugin-glsl": "^1.2.0",
-		"rollup-plugin-json": "^3.1.0",
-		"rollup-plugin-livereload": "^0.6.0",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"rimraf": "^2.6.3",
+		"rollup": "^1.9.0",
+		"rollup-plugin-analyzer": "^3.0.0",
+		"rollup-plugin-bundle-html": "^0.1.5",
+		"rollup-plugin-commonjs": "^9.3.4",
+		"rollup-plugin-json": "^4.0.0",
+		"rollup-plugin-livereload": "^1.0.0",
 		"rollup-plugin-minify": "^1.0.3",
-		"rollup-plugin-node-resolve": "^3.4.0",
-		"rollup-plugin-replace": "^2.1.0",
-		"rollup-plugin-serve": "^0.6.0",
+		"rollup-plugin-node-resolve": "^4.2.0",
+		"rollup-plugin-replace": "^2.1.1",
+		"rollup-plugin-serve": "^1.0.1",
 		"rollup-plugin-sourcemaps": "^0.4.2",
-		"rollup-plugin-string": "^2.0.2",
-		"rollup-plugin-terser": "^3.0.0",
-		"rollup-plugin-typescript": "^1.0.0",
-		"rollup-plugin-typescript2": "^0.17.1",
-		"rollup-plugin-uglify": "^6.0.0",
+		"rollup-plugin-string": "^3.0.0",
+		"rollup-plugin-terser": "^4.0.4",
+		"rollup-plugin-typescript": "^1.0.1",
+		"rollup-plugin-typescript2": "^0.20.1",
+		"rollup-plugin-uglify": "^6.0.2",
 		"svg-to-dataurl": "^1.0.0",
-		"terser": "^3.10.1",
-		"ts-node": "^7.0.1",
-		"ts3dutils": "^0.1.1",
-		"tslint": "^5.11.0",
-		"tslint-config-prettier": "^1.15.0",
-		"typescript": "^3.1.3",
+		"terser": "^3.17.0",
+		"ts-node": "^8.0.3",
+		"ts3dutils": "^0.2.3",
+		"tslint": "^5.15.0",
+		"tslint-config-prettier": "^1.18.0",
+		"typescript": "^3.4.2",
 		"uglify-es": "^3.3.9",
 		"unescape": "^1.0.1",
 		"webgl-strict-types": "^1.0.1"
