--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,8 @@
 		"allowSyntheticDefaultImports": true,
 		"rootDir": "src",
 		"sourceMap": true,
+		"strict": true,
 		"resolveJsonModule": false
 	},
-	"include": [
-		"src/*.ts",
-		"src/*.d.ts",
-		"src/*.tsx",
-		"node_modules/webgl-strict-types/*.d.ts"
-	]
+	"include": ["src/*.ts", "src/*.d.ts", "src/*.tsx", "node_modules/webgl-strict-types/*.d.ts"]
 }
