--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 	},
 	"author": "",
 	"license": "ISC",
-	"dependencies": {
+	"dependencies": {},
+	"devDependencies": {
 		"@types/lodash-es": "^4.17.3",
 		"@types/mathjax": "0.0.35",
 		"@types/react-router-dom": "^4.3.1",
@@ -35,19 +36,15 @@
 		"react-timeago": "^4.4.0",
 		"reactstrap": "^8.0.0",
 		"showdown": "^1.9.0",
-		"slugify": "^1.3.4"
-	},
-	"devDependencies": {
+		"slugify": "^1.3.4",
+		"tslint": "^5.15.0",
 		"@types/classnames": "^2.2.7",
-		"@types/lodash.memoize": "^4.1.6",
 		"@types/react": "^16.8.12",
 		"@types/react-dom": "^16.8.3",
 		"@types/react-timeago": "^4.1.0",
-		"chroma.ts": "^1.0.3",
 		"classnames": "^2.2.6",
 		"gists": "^2.0.0",
 		"lodash-es": "^4.17.11",
-		"lodash.memoize": "^4.1.2",
 		"pre-commit": "^1.2.2",
 		"prettier": "^1.16.4",
 		"querystring": "^0.2.0",
@@ -70,15 +67,12 @@
 		"rollup-plugin-typescript": "^1.0.1",
 		"rollup-plugin-typescript2": "^0.20.1",
 		"rollup-plugin-uglify": "^6.0.2",
-		"svg-to-dataurl": "^1.0.0",
 		"terser": "^3.17.0",
 		"ts-node": "^8.0.3",
 		"ts3dutils": "^0.2.3",
-		"tslint": "^5.15.0",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.4.2",
 		"uglify-es": "^3.3.9",
-		"unescape": "^1.0.1",
-		"webgl-strict-types": "^1.0.1"
+		"unescape": "^1.0.1"
 	}
 }
