--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"clean:rpt2": "rimraf .rpt2_cache src/.rpt2_cache",
 		"start": "npm run clean:rpt2 & rollup -w -c rollup.config.js",
 		"build": "npm run clean:rpt2 & rollup -c rollup.config.js --environment BUILD:production",
-		"pre-commit": "npm run build && git add bundle.*"
+		"pre-commit": "npm run build && git add bundle.* index.html"
 	},
 	"pre-commit": [
 		"pre-commit"
